infra/k8s/message-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
        - name: message
          image: registry.digitalocean.com/easymez/message
---
apiVersion: v1
kind: Service
metadata:
  name: message-srv
  namespace: backend
spec:
  selector:
    app: message
  ports:
    - name: message
      protocol: TCP
      port: 3000
      targetPort: 3000

#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: facebookwebhook-depl
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: facebookwebhook
#  template:
#    metadata:
#      labels:
#        app: facebookwebhook
#    spec:
#      containers:
#        - name: facebookwebhook
#          image: kursat38tr/facebookwebhook
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: facebookwebhook-srv
#spec:
#  selector:
#    app: facebookwebhook
#  ports:
#    - name: facebookwebhook
#      protocol: TCP
#      port: 3000
#      targetPort: 3000
